# 4vk-soup

./: .gitpod.yml  .tool-versions  README.md  pyproject.toml  vk_bot.sublime-workspace
bot/: main.py  part1.py
templates/: base.py
tests/: test01.py
